# lidarviewer

./: .gitignore  CMakeLists.txt  README.md  lidar.pro  setup.py
components/qt_viewer/: CMakeLists.txt
components/qt_viewer/include/qt_viewer/: camera_frustum.h  dummy_axis.h  dummy_boxes.h  octree.h  sector.h  vertex.h  vertex_stl.h
components/qt_viewer/resources/shader/: box_2d.frag  box_2d.vert  canvas.frag  canvas.vert  floor_grid_perspective.vert
components/qt_viewer/src/: camera.cpp  camera_frustum.cpp  dummy_axis.cpp  dummy_box.cpp  dummy_boxes.cpp  dummy_canvas.cpp  dummy_car.cpp  dummy_floorgrid.cpp  octree.cpp  point_cloud.cpp  sector.cpp  selection_box.cpp  transform3d.cpp  viewer.cpp  widget_lidarvisualizer.cpp
executable/: viewer.cpp
include/lidar/: box3.h  camera.h  camera_frustum.h  comm_funcs.h  data_pixmap.h  dummy_axis.h  dummy_box.h  dummy_boxes.h  dummy_canvas.h  dummy_car.h  dummy_floorgrid.h  octree.h  octree_node.h  palettes.h  point_cloud.h  sector.h  selection_box.h  transform3d.h  vertex.h  vertex_stl.h  widget_lidarvisualizer.h  window_viewer.h
lidarviewer/: __init__.py  test_point_cloud.py  viewer.py
resources/: lidar_viewer_resources.qrc
resources/shader/: box_3d.vert  floor_grid_ortho.frag  floor_grid_ortho.vert  floor_grid_perspective.frag  point.frag  point.vert
scripts/: test_point_cloud.py
src/: camera.cpp  camera_frustum.cpp  dummy_axis.cpp  dummy_box.cpp  dummy_boxes.cpp  dummy_canvas.cpp  dummy_car.cpp  dummy_floorgrid.cpp  octree.cpp  point_cloud.cpp  sector.cpp  selection_box.cpp  transform3d.cpp  widget_lidarvisualizer.cpp  window_viewer.cpp
unittest/: test_octree.py  test_point_cloud.py
